--- a/src/styles.scss
+++ b/src/styles.scss
@@ -11,9 +11,17 @@
     border-top-color: #fff;
 }
 
-.cc-grey g rect { fill: grey !important; }
-
 .gantt .grid-row:nth-child(even) {
     fill: #ffffff !important;
 }
+.cc-grey g rect { fill: rgb(158, 150, 150) !important; }
+
+.cc-blue g rect { fill: rgb(116, 116, 175) !important; }
+
+.cc-blue g rect { fill: rgb(120, 146, 120) !important; }
+
+.cc-yellow g rect { fill: rgb(206, 236, 150) !important; }
+
+.cc-red g rect { fill: rgb(236, 161, 161)!important; }
+
 
