--- a/src/styles.scss
+++ b/src/styles.scss
@@ -18,7 +18,7 @@
 
 .cc-blue g rect { fill: rgb(116, 116, 175) !important; }
 
-.cc-blue g rect { fill: rgb(120, 146, 120) !important; }
+.cc-green g rect { fill: rgb(120, 146, 120) !important; }
 
 .cc-yellow g rect { fill: rgb(206, 236, 150) !important; }
 
